[metadata]
name = gravitas
version = 0.0.2
author = Aditya Hegde
author_email = adimhegde@gmail.com
description = A simple module for physics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bwaklog/gravitas
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package = find:
python_requires = >= 3.10
include_package = True